--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -9,20 +9,39 @@
 				"views" : "Views"
 			},
 			"breadcrumb" : {
-				"no_item" : "No item selected",
-				"home" : "Home"
+				"no_item" 						: "No item selected",
+				"home" 							: "Home"
 			},
 			"message" : {
-				"unable_to_load_view" 	: "Unable to load view",
-				"unknown_view" 			: "Unknown view",
-				"item_not_exist" 		: "Item doesn't exist",
-				"item_no_information" 	: "Unable to get item information",
-				"item_success_delete"   : "Item successfully deleted",
-				"item_failure_delete"   : "Unable to delete item",
-				"item_success_link"   	: "Item successfully linked",
-				"item_failure_link"		: "Unable to link item",
-				"item_success_unlink"	: "Item successfully unlinked",
-				"item_failure_unlink"	: "Unable to unlink item"
+				"Warning"						: "Warning",
+				"Info"							: "Info",
+				"Error"							: "Error",
+				"Success"						: "Success",
+				"unable_to_load_view" 			: "Unable to load view",
+				"unknown_view" 					: "Unknown view",
+				"item_not_exist" 				: "Item doesn't exist",
+				"item_no_information" 			: "Unable to get item information",
+				"item_success_delete"   		: "Item successfully deleted",
+				"item_failure_delete"   		: "Unable to delete item",
+				"item_success_link"   			: "Item successfully linked",
+				"item_failure_link"				: "Unable to link item",
+				"item_success_unlink"			: "Item successfully unlinked",
+				"item_failure_unlink"			: "Unable to unlink item",
+				"item_success_create"   		: "Item successfully created",
+				"item_failure_create"   		: "Unable to create item",
+				"missing_value_for_property" 	: "Missing value for required property"
+			},
+			"form" : {
+				"item" : {
+					"name" 		: "Name",
+					"category"	: "Category",
+					"class" 	: "Class",
+					"add_to_current_item" 	: "Add to current item"
+				},
+				"button" : {
+					"cancel" 	: "Cancel",
+					"create" 	: "Create"
+				}
 			},
 			"view" : {
 				"strategical" 	: "Strategical view",
