--- a/WebContent/i18n/fr.json
+++ b/WebContent/i18n/fr.json
@@ -2,12 +2,12 @@
 	"fr" : {
 		"translation" : {
 			"menu" : {
-				"item" 		: "Elément",
-				"document"  : "Document",
-				"search" 	: "Chercher",
-				"create" 	: "Créer",
-				"delete" 	: "Effacer",
-				"views" 	: "Vues"
+				"item" 							: "Elément",
+				"document"  					: "Document",
+				"search" 						: "Chercher",
+				"create" 						: "Créer",
+				"delete" 						: "Effacer",
+				"views" 						: "Vues"
 			},
 			"breadcrumb" : {
 				"no_item" 						: "Aucun élément sélectionné",
@@ -24,6 +24,7 @@
 				"unknown_view" 					: "Vue non supportée",
 				"item_not_exist" 				: "L'élément n'existe pas",
 				"item_no_information" 			: "Impossible d'obtenir d'information sur l'élément",
+				"item_failure_search"  			: "Impossible d'effecture la recherche",
 				"item_success_delete"   		: "Elément supprimé avec succés",
 				"item_failure_delete"  			: "Impossible de supprimer l'élément",
 				"item_success_link"   			: "Elément lié avec succés",
@@ -32,33 +33,77 @@
 				"item_failure_unlink"			: "Impossible de dissocier l'élément",
 				"item_success_create"   		: "Elément créé avec succés",
 				"item_failure_create"   		: "Impossible de créer l'élément",
+				"item_failure_related_items"  	: "Unable to get the related items",
+				"document_delete_confirm"		: "Voulez-vous réellement supprimer ce document ?",
+				"document_success_delete"		: "Document supprimé avec succès",
+				"document_failure_delete"		: "Impossible de supprimer le document",
+				"document_failure_list"			: "Impossible d'obtenir la liste des documents",
+				"document_failure_get"			: "Impossible d'obtenir les informations du document",
 				"not_yet_implemented"			: "Function non encore implémentée",
 				"missing_value_for_property" 	: "Il manque une valeur pour une propriété obligatoire"
 			},
+			"category" : {
+				"actor"		: "acteur",
+				"data"		: "donnée",
+				"device"	: "matériel",
+				"domain"	: "domaine",
+				"location"	: "lieu",
+				"process"	: "processus",
+				"server"	: "serveur",
+				"service"	: "service",
+				"software"	: "logiciel",
+				"solution"	: "solution"				
+			},
 			"form" : {
 				"item" : {
-					"title"					: "Elément",
-					"name" 					: "Nom",
-					"category" 				: "Categorie",
-					"class" 				: "Classe",
-					"add_to_current_item" 	: "Ajouter à l'élément courrant"
+					"id"						: "Identifiant",
+					"title"						: "Elément",
+					"name" 						: "Nom",
+					"category" 					: "Catégorie",
+					"class" 					: "Classe",
+					"add_to_current_item" 		: "Ajouter à l'élément courrant",
+					"detail" 					: "Détail",
+					"fields"					: "Attributs de l'élément",
+					"description"				: "Description",
+					"relateds" 					: "Eléments liés",
+					"link"						: "Lien",
+					"documents" 				: "Documents",
+					"filters" 					: "Filtres",
+					"filter_direction"			: "Direction",
+					"filter_categories"			: "Catégories",
+					"show_all"					: "Montrer tout",
+					"up"						: "Haut",
+					"down"						: "Bas"
+				},
+				"document" : {
+					"title"						: "Document",
+					"name" 						: "Nom",
+					"type" 						: "Type"
+				},
+				"all" : {
+					"action"					: "Action",
+					"select_a_value"			: "Choisir une valeur"
 				},
 				"button" : {
-					"cancel" 	: "Annuler",
-					"create" 	: "Créer",
-					"open"		: "Ouvrir",
-					"delete"	: "Effacer",
-					"close"		: "Fermer"
+					"cancel" 					: "Annuler",
+					"create" 					: "Créer",
+					"update" 					: "Mettre à jour",
+					"open"						: "Ouvrir",
+					"delete"					: "Effacer",
+					"close"						: "Fermer",
+					"validate"					: "Valider",
+					"search"					: "Chercher"
 				}
 			},
 			"view" : {
-				"strategical" 	: "Vue stratégique",
-				"business" 		: "Vue métier",
-				"logical"		: "Vue logique",
-				"detail"		: "Détail",
-				"map"			: {
-					"europe"	: "Carte - Europe",
-					"world"		: "Carte - Monde"
+				"strategical" 					: "Vue stratégique",
+				"business" 						: "Vue métier",
+				"logical"						: "Vue logique",
+				"item_detail"					: "Item",
+				"document_detail"				: "Document",
+				"map" : {
+					"europe"					: "Carte - Europe",
+					"world"						: "Carte - Monde"
 				}
 			}
 		}
