--- a/WebContent/i18n/fr.json
+++ b/WebContent/i18n/fr.json
@@ -99,6 +99,8 @@
 				"strategical" 					: "Vue stratégique",
 				"business" 						: "Vue métier",
 				"logical"						: "Vue logique",
+				"process"						: "Vue processus",
+				"technical"						: "Vue technique",
 				"item_detail"					: "Item",
 				"document_detail"				: "Document",
 				"map" : {
