--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -61,7 +61,6 @@
 					"name" 						: "Name",
 					"category"					: "Category",
 					"class" 					: "Class",
-					"add_to_current_item" 		: "Add to current item",
 					"detail" 					: "Detail",
 					"fields"					: "Item fields",
 					"description"				: "Description",
@@ -82,6 +81,7 @@
 				},
 				"all" : {
 					"action"					: "Action",
+					"add_to_current_item" 		: "Add to current item",
 					"select_a_value"			: "Select a value"
 				},
 				"button" : {
@@ -101,12 +101,16 @@
 				"logical"						: "Logical view",
 				"process"						: "Process view",
 				"technical"						: "Technical view",
-				"item_detail"					: "Elément",
-				"document_detail"				: "Document",
+				"item_create"					: "Create an item",
+				"item_detail"					: "Item",
+				"item_search"					: "Search an item",
 				"map" : {
 					"europe"					: "Map - Europe",
 					"world"						: "Map - World"
-				}
+				},
+				"document_create"				: "Create a document",
+				"document_detail"				: "Document",
+				"document_search"				: "Search a document"
 			}
 		}
 	}
