Add create and update document feature

--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -25,6 +25,7 @@
 				"item_not_exist" 				: "Item doesn't exist",
 				"item_no_information" 			: "Unable to get item information",
 				"item_failure_search"  			: "Unable to perform the search",
+				"item_delete_confirm"			: "Do you really want to delete this item ?",
 				"item_success_delete"   		: "Item successfully deleted",
 				"item_failure_delete"   		: "Unable to delete the item",
 				"item_success_link"   			: "Item successfully linked",
@@ -37,8 +38,13 @@
 				"document_delete_confirm"		: "Do you really want to delete this document ?",
 				"document_success_delete"		: "Document successfully deleted",
 				"document_failure_delete"		: "Unable to delete the document",
+				"document_success_create"		: "Document successfully created",
+				"document_failure_create"		: "Unable to create the document",
+				"document_success_update"		: "Document successfully upated",
+				"document_failure_update"		: "Unable to update the document",
 				"document_failure_list"			: "Unable to get documents list",
 				"document_failure_get"			: "Unable to get document information",
+				"no_document_selected"			: "No document selected",
 				"not_yet_implemented"			: "Function not yet implemented",
 				"missing_value_for_property" 	: "Missing value for required property"
 			},
