--- a/WebContent/i18n/fr.json
+++ b/WebContent/i18n/fr.json
@@ -25,6 +25,7 @@
 				"item_not_exist" 				: "L'élément n'existe pas",
 				"item_no_information" 			: "Impossible d'obtenir d'information sur l'élément",
 				"item_failure_search"  			: "Impossible d'effecture la recherche",
+				"item_delete_confirm"			: "Voulez-vous réellement supprimer cet élément ?",
 				"item_success_delete"   		: "Elément supprimé avec succés",
 				"item_failure_delete"  			: "Impossible de supprimer l'élément",
 				"item_success_link"   			: "Elément lié avec succés",
@@ -37,8 +38,13 @@
 				"document_delete_confirm"		: "Voulez-vous réellement supprimer ce document ?",
 				"document_success_delete"		: "Document supprimé avec succès",
 				"document_failure_delete"		: "Impossible de supprimer le document",
+				"document_success_create"		: "Document créé avec succès",
+				"document_failure_create"		: "Impossible de créer le document",
+				"document_success_update"		: "Document modifié avec succès",
+				"document_failure_update"		: "Impossible de modifier le document",
 				"document_failure_list"			: "Impossible d'obtenir la liste des documents",
 				"document_failure_get"			: "Impossible d'obtenir les informations du document",
+				"no_document_selected"			: "Aucun document sélectionné",
 				"not_yet_implemented"			: "Function non encore implémentée",
 				"missing_value_for_property" 	: "Il manque une valeur pour une propriété obligatoire"
 			},
