--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -97,6 +97,8 @@
 					"open"						: "Open",
 					"delete"					: "Delete",
 					"close"						: "Close",
+					"link"						: "Link",
+					"unlink"					: "Unlink",
 					"validate"					: "Validate",
 					"search"					: "Search"
 				}
