--- a/WebContent/i18n/fr.json
+++ b/WebContent/i18n/fr.json
@@ -98,6 +98,8 @@
 					"open"						: "Ouvrir",
 					"delete"					: "Effacer",
 					"close"						: "Fermer",
+					"link"						: "Lier",
+					"unlink"					: "Détacher",
 					"validate"					: "Valider",
 					"search"					: "Chercher"
 				}
