Add change status of project_steps

--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -102,6 +102,7 @@
 				},
 				"status" : {
 					"opened" 					: "opened",
+					"started" 					: "started",
 					"validated" 				: "validated",
 					"finished" 					: "finished",
 					"not_applicable" 			: "not applicable",
