--- a/WebContent/i18n/en.json
+++ b/WebContent/i18n/en.json
@@ -49,6 +49,8 @@
 				"document_failure_get"			: "Unable to get document information",
 				"project_phase_failure_create"  : "Unable to create the project phase",
 				"project_step_failure_update"	: "Unable to update the project step",
+				"project_risk_failure_delete"	: "Unable to delete project risk",
+				"project_risk_delete_confirm"	: "Do you really want to delete this risk ?",
 				"no_document_selected"			: "No document selected",
 				"not_yet_implemented"			: "Function not yet implemented",
 				"missing_value_for_property" 	: "Missing value for required property"
@@ -90,7 +92,13 @@
 					"name"						: "Name",
 					"detail"					: "Detail",
 					"description"				: "Description",
-					"risks"						: "Risks",
+					"risk"						: {
+						"title"					: "Risks",
+						"criticity"				: "Criticity",
+						"probability"			: "Probability",
+						"value"					: "Value",
+						"description"			: "Description"
+					},
 					"views"						: "Views",
 					"phases"					: "Phases",
 					"stakeholders"				: "Stake holders",
