Use select to change project status

--- a/WebContent/i18n/fr.json
+++ b/WebContent/i18n/fr.json
@@ -106,7 +106,8 @@
 					"step"						: {
 						"title"  				: "Etape",
 						"name"	 				: "Nom"
-					}
+					},
+					"linktodocument"			: "Lier au document"
 				},
 				"status" : {
 					"opened" 					: "ouvert",
